--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-block_buster_game/block_buster.bin
-block_buster_game/a.out
+speedpong_3000_game/speedpong_3000.bin
+speedpong_3000_game/a.out
 .DS_Store
